Ajustes en la app

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,9 +2,9 @@
     <!-- Base application theme. -->
     <style name="Theme.PruebaDeIngreso" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">@color/green_ppal</item>
+        <item name="colorPrimaryDark">@color/green_deep</item>
+        <item name="colorAccent">@color/green_accent</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
