--- a/app/src/main/res/layout/item_user_view.xml
+++ b/app/src/main/res/layout/item_user_view.xml
@@ -27,12 +27,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:layout_marginRight="5dp"
                 android:src="@drawable/ic_baseline_phone_iphone_24" />
 
             <TextView
                 android:id="@+id/tvPhone"
-                style="@style/TextAppearance.AppCompat.Body1"
+                style="@style/TextAppearance.AppCompat.Body2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tool:text="1-770-736-8031 x56442" />
@@ -48,12 +47,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="5dp"
-                android:layout_marginRight="5dp"
                 android:src="@drawable/ic_baseline_email_24" />
 
             <TextView
                 android:id="@+id/tvEmail"
-                style="@style/TextAppearance.AppCompat.Body1"
+                style="@style/TextAppearance.AppCompat.Body2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tool:text="Sincere@april.biz" />
@@ -71,7 +69,7 @@
                 android:background="@android:color/transparent"
                 android:text="@string/posts"
                 android:textColor="#3B7D26"
-                android:textSize="12sp"/>
+                style="@style/TextAppearance.AppCompat.Body2"/>
 
         </RelativeLayout>
 
